<resources>
    <string name="Login_username">ProyectoGanadero</string>
    <string name="HomePage_Title">Software Ganadero</string>
    <string name="HomePage_Farm">Finca</string>
    <string name="HomePage_User">Usuario</string>
    <string name="HomePage_Cows">Ganado</string>
    <string name="HomePage_Vaccine">Vacunas</string>
    <string name="HomePage_Finance">Finanzas</string>
    <string name="HomePage_Diagnosis">Diagnostico</string>
    <string name="HomePage_Help">Ayuda</string>
    <string name="HomePage_Notifications">Notificaciones</string>
    <string name="Farm_Title">Elija su finca</string>
    <string name="Farm_Recomendation">Seleccione la finca con la que desea ingresar, en caso de no tener una finca registrada seleccione el boton registrar finca</string>
    <string name="Farm_Register">Registrar finca</string>
    <string name="FarmRegister_Title">Registra tu finca</string>
    <string name="FarmRegister_Name">Nombre de la finca</string>
    <string name="FarmRegister_Address">Direccion de la finca</string>
    <string name="FarmRegister_Hectares">Hectareas de la finca</string>
    <string name="FarmRegister_Capacity">Capacidad de la finca</string>
    <string name="FarmRegister_Return">Regresar</string>
    <string name="LogIn_Password">Contraseña</string>
    <string name="LogIn_RecordPassword">¿Cómo iniciar sesión?</string>
    <string name="LogIn_Register">Registrarse</string>
    <string name="LogIn_SignIn">Ingresar</string>
    <string name="LogIn_hint_password">**********</string>
    <string name="LogIn_hint_username">EjemploUsuario123</string>
    <string name="RegisterUser_Title">Registro De Usuario</string>
    <string name="RegisterUser_Name">Nombre</string>
    <string name="RegisterUser_Phone">Telefono</string>
    <string name="RegisterUser_Security_Question">Pregunta de Seguridad</string>
    <string name="RegisterUser_RecordPassword">Confirmar contraseña</string>
    <string name="RegisterUser_AlreadyRegistered">Ya Estoy Registrado</string>
    <string name="FarmEditDelete_Edit">Editar su finca</string>
    <string name="FarmEditDelete_Delete">Eliminar su finca</string>
    <string name="FarmEditDelete_Title">Bienvenido a su finca</string>
    <string name="FarmEditDelete_HomePage">Volver al inicio</string>
    <string name="Finance_title">Finanzas</string>
    <string name="Finance_description">Dependiendo de la acción que desea realizar de click en el botón correspondiente</string>
    <string name="Finance_receiptBuy">Recibo compra</string>
    <string name="Finance_receiptSell">Recibo venta</string>
    <string name="Finance_earnings_lost">Ganancias y perdidas</string>
    <string name="Finance_earnings_lost_in">Total invertido</string>
    <string name="Finance_earnings_lost_abstract">Resumen</string>
    <string name="Finance_earnings_lost_abstract_vaccine">Total gastado en vacunas</string>
    <string name="Finance_earnings_lost_won">Total ganado</string>
    <string name="Finance_receipt">Historial recibos</string>
    <string name="Finance_description2">Los botones mostrados a continuación le permiten realizar el registro de un recibo de compra en caso de adquirir un nuevo producto o un recibo de venta en caso de vender ganado </string>
    <string name="User_EditInfo">Editar mi información</string>
    <string name="User_ChangePassword">Cambiar mi contraseña</string>
    <string name="User_goToHomePage">Pagina Principal</string>
    <string name="ConsultCows_RegisteredCows">Ganado Registrado</string>
    <string name="ConsultCows_Recomendation"> Seleccione el animal que desee consultar, editar o eliminar</string>
    <string name="ConsultCows_Recomendation2">Seleccione la novedad para consultar en detalle las actualizaciones de cada animal</string>
    <string name="ConsultCows_RegisterCow">Registrar Vaca</string>
    <string name="ConsultCows_Marking">Marcacion</string>
    <string name="ConsultCows_Weight">Peso (kg)</string>
    <string name="ConsultCows_Gender">Genero</string>
    <string name="RegisterCow_Title">Registrar Ganado de Levante</string>
    <string name="RegisterCow_Marking">Marcación</string>
    <string name="RegisterCow_Birthday">Fecha Nacimiento</string>
    <string name="RegisterCow_Age">Edad</string>
    <string name="RegisterCow_Breed">Raza</string>
    <string name="RegisterCow_State">Estado</string>
    <string name="RegisterCow_Type">Tipo</string>
    <string name="RegisterCow_Cost">Costo</string>
    <string name="Buy_title">Gastos</string>
    <string name="Buy_description">Aqui podra añadir los insumos que compró para su finca.</string>
    <string name="Buy_name">Nombre del producto</string>
    <string name="Buy_descriptionProduct">Descripcion del producto</string>
    <string name="Buy_date">Fecha de la compra</string>
    <string name="Buy_price">Precio de la compra</string>
    <string name="Buy_nameSeller">Nombre del proveedor</string>
    <string name="Buy_telSeller">Telefono proveedor</string>
    <string name="Buy_saveBuy">Guardar</string>
    <string name="Buy_buyCow">Comprar Ganado</string>
    <string name="ReceiptHistory_title">Historial de recibos</string>
    <string name="ReceiptHistory_return">Volver</string>
    <string name="SellCow_title">Venta de ganado</string>
    <string name="SellCow_Description">Seleccione el animal que desea vender</string>
    <string name="SellCow_Dialing">Marcación del animal</string>
    <string name="SellCow_Weight">Peso del animal</string>
    <string name="SellCow_Price">Precio del animal</string>
    <string name="SellCow_NameBuyer">Nombre del comprador</string>
    <string name="SellCow_TelBuyer">Telefono del comprador</string>
    <string name="SellCow_Save">Guardar recibo venta</string>
    <string name="EditDeleteReceipt_name">Nombre recibo</string>
    <string name="EditDeleteReceipt_price">valor recibo</string>
    <string name="EditDeleteReceipt_date">Fecha recibo</string>
    <string name="EditDeleteReceipt_edit">Editar Recibo</string>
    <string name="EditDeleteReceipt_delete">Eliminar Recibo</string>
    <string name="AbstractNothing">Actualmente, no se han registrado ganancias ni pérdidas.</string>
    <string name="AbstractWon">Actualmente, ha acumulado ganancias totales por un monto de: </string>
    <string name="AbstractLost">Se registran pérdidas. Sus perdidas son de: </string>
    <string name="help_title">Asistencia para el uso de la app</string>
    <string name="help_cow">Con el video que se da a continuación podrá ver como se registra, edita, consulta y elimina un animal: </string>
    <string name="help_video">Ver video</string>
    <string name="register_news_diet">Dieta</string>
    <string name="help_vaccine">En el siguiente video puede observar cómo se realiza el registro, consulta, edición y eliminación de una vacuna: </string>
    <string name="help_Finance">En el siguiente video puede observar cómo se maneja el modulo de finanzas y todo lo que puede hacer allí: </string>
    <string name="help_other">En el siguiente video puede observar cómo se maneja el modulo de usuario y finca: </string>
    <string name="consult_estadis_title">Registrar parto de la vaca </string>
    <string name="register_news">Registrar novedad vaca </string>
    <string name="resume_cow">Hoja de vida de la vaca </string>
    <string name="breeding_cows">Ganado de Cría</string>
    <string name="register_cow">Registrar ganado</string>
    <string name="lifting_cows">Ganado de Levante</string>
    <string name="tips">Consejos</string>
    <string name="tip">Consejo</string>
    <string name="text_tips">A continuacion podra observar varios consejos para personas que se quieren dedicar a la ganaderia</string>
    <string name="rides_history">Historial montas</string>
    <string name="select_info_to_consult">Seleccione la informacion de la monta que desee consultar</string>
    <string name="ride_register">registrar monta</string>
    <string name="text_vaccines">Para registar una vacuna para la vaca hay que darle click en el icono de jeringa</string>
    <string name="corral">Corral</string>
    <string name="corral_text_instructions">Acá encontrará a las crias de las vacas que aún no tiene un fin.</string>
    <string name="register_weight">registrar peso</string>
    <string name="register_novelty">registrar novedad</string>
    <string name="consult_vaccines">Consultar vacunas</string>
    <string name="bovine_death">Muerte bovina</string>
    <string name="text_consult_bovine_death">Para consultar la causa de muerte seleccione el animal</string>
    <string name="edit_and_delete_cow">Editar y Eliminar Ganado</string>
    <string name="mother">Madre</string>
    <string name="father">Padre</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="delete">Eliminar</string>
    <string name="notify_death">Notificar Muerte</string>
    <string name="castrated_question">¿Castrado?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="edit_and_delete_vaccine">Editar o Eliminar Vacuna</string>
    <string name="vaccine_name">Nombre de Vacuna</string>
    <string name="vaccine_cost">Valor de la Vacuna</string>
    <string name="date">Fecha</string>
    <string name="supplier">Suministrador</string>
    <string name="bills">Gastos</string>
    <string name="sell_cow">Vender ganado</string>
    <string name="see_tips">Ver Consejos</string>
    <string name="cow_module">Modulo de ganado</string>
    <string name="lifting_cow">Ganado Levante</string>
    <string name="breeding_cow">Ganado Cria</string>
    <string name="sold_cows">Ganado Vendido</string>
    <string name="death_cows">Ganado Muerto</string>
    <string name="insemination_date">Fecha de Inseminación</string>
    <string name="description_insemination">Descripcion de la Inseminación</string>
    <string name="origin_sperm">Procedencia del esperma</string>
    <string name="register">Registar</string>
    <string name="death_date">Fecha de Muerte</string>
    <string name="cause_death">Causa de Muerte</string>
    <string name="death_description">Descripcion de la muerte</string>
    <string name="confirm">Confirmar</string>
    <string name="select_receipt_to_consult">Seleccione el recibo que desee consultar</string>
    <string name="register_breeding_cow">Registrar Ganado de Cría</string>
    <string name="optional">Opcionales</string>
    <string name="birth_date">Fecha parto</string>
    <string name="insemination">Inseminación</string>
    <string name="gender">Genero</string>
    <string name="pregnancy_diet">Dieta durante el embarazo</string>
    <string name="text_select_option">Seleccione una opción en caso de haber presentado alguna de estas opciones</string>
    <string name="sick_baby_question">¿La cria nació enferma?</string>
    <string name="dead_baby_question">¿La cria murió?</string>
    <string name="date_take_weight">Fecha toma de peso</string>
    <string name="register_vaccine">Registro de Vacuna</string>
    <string name="registered_vaccines">Vacunas Registradas</string>
    <string name="text_select_vaccine_to_consult">Seleccione la vacuna que desea consultar o editar</string>
    <string name="text_info_sold_cows">El icono de lupa sirve para ver los datos o estadisticas del animal vendido, el icono de lapiz sirve para eliminar el animal.</string>
    <string name="personal_info">Información Personal</string>
    <string name="delete_user">Eliminar Usuario</string>
    <string name="vaccine_details">Detalles de vacuna</string>
</resources>