<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".ui.Finance.BuyActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/Buy_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_card"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Buy_description"
                android:padding="10dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/Buy_name"
                android:padding="5dp"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descrption"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/Buy_descriptionProduct"
                android:padding="5dp"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDesProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/Buy_date"
                android:padding="5dp"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFechaCompra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/Buy_price"
                android:padding="5dp"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPrecioProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/namex"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/Buy_nameSeller"
                android:padding="5dp"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombreProveedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/Buy_telSeller"
                android:padding="5dp"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTelProveedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSaveBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/button_red"
                    android:text="@string/Buy_saveBuy" />

                <Button
                    android:id="@+id/btnBuyCow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/button_red"
                    android:text="@string/Buy_buyCow" />
            </LinearLayout>
            <Button
                android:id="@+id/btnReturnHome"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/button_red"
                android:layout_gravity="center"
                android:text="@string/ReceiptHistory_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>