<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvCow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:backgroundTint="@color/homepage_card"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMarking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/item"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/ConsultCows_Marking" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/item"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/ConsultCows_Weight" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/item"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/ConsultCows_Gender" />

    </LinearLayout>

</androidx.cardview.widget.CardView>