<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".ui.Farm.register.FarmRegisterActivity">

    <include
        android:id="@+id/viewToolBar"
        layout="@layout/view_tool_bar"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/FarmEditDelete_Title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cardEditDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewToolBar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEditDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/background_card"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEdit"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FarmRegister_Name"
                android:textColor="@color/gray"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFarmName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FarmRegister_Address"
                android:textColor="@color/gray"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFarmAddres"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FarmRegister_Hectares"
                android:textColor="@color/gray"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFarmHectares"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="2"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FarmRegister_Capacity"
                android:textColor="@color/gray"
                android:textSize="23sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFarmCapacity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/FarmEditDelete_Edit"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardEditDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/FarmEditDelete_Delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEdit" />


</androidx.constraintlayout.widget.ConstraintLayout>