<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".ui.Farm.consult.FarmActivity">

    <include
        android:id="@+id/viewToolBar"
        layout="@layout/view_tool_bar" />

    <LinearLayout
        android:id="@+id/llfirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/cvHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewToolBar">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Farm_Title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            android:text="@string/Farm_Recomendation"
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHome"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/background_card"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/llfirst">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegisterFarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/button_red"
        android:text="@string/Farm_Register"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>